force-app/main/default/objects/Row_2_Flow_Run_Result__c/Row_2_Flow_Run_Result__c.object-meta.xml
<CustomObject>
    <label>Row 2 Flow Run Result</label>
    <nameField>
        <displayFormat>R2F-R-{000000}</displayFormat>
        <label>Row 2 Flow Run Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Row 2 Flow Run Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>