force-app/main/default/objects/Row_2_Flow_Run_Result__c/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <label>Additional Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>