force-app/main/default/objects/Row_2_Flow_Run_Result__c/fields/Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Id__c</fullName>
    <externalId>true</externalId>
    <label>Batch Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>