force-app/main/default/objects/Row_2_Flow_Run_Result__c/fields/Configuration_Name__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Name__c</fullName>
    <label>Configuration Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>