force-app/main/default/objects/Row_2_Flow_Run_Result__c/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <label>Flow</label>
    <length>100</length>
    <type>Text</type>
</CustomField>