force-app/main/default/objects/Row_2_Flow_Run_Result__c/fields/Number_Success_Rows__c.field-meta.xml
<CustomField>
    <fullName>Number_Success_Rows__c</fullName>
    <label>Number Success Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>