force-app/main/default/objects/Row_2_Flow_Run_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Flow__c</columns>
    <columns>Type__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Batch_Job_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>